# Event_Detection_Finance

./: Dockerfile  ReadMe.md  pyproject.toml
app/: main.py  routes.py  services.py
data/: Bitcoin_to_upload.csv  News_to_upload.xlsx
