[project]
name = "api-code"
version = "0.1.0"
description = ""
authors = [
    {name = "chekalisa",email = "chalisa2002@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (==1.13)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "streamlit (>=1.41.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
